first pass at testing loads
